--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#Banco local - ifome
-spring.datasource.url= jdbc:postgresql://localhost:5432/delivery
+#Banco local - iQFome
+spring.datasource.url= jdbc:postgresql://localhost:5432/iqfome
 spring.datasource.username=postgres
 spring.datasource.password=mat010104
 spring.jpa.hibernate.ddl-auto=update
